--- a/codigo/package.json
+++ b/codigo/package.json
@@ -4,7 +4,7 @@
   "description": "Laboratório de aplicação Web com backend baseado no JSON Server",
   "main": "index.js",
   "scripts": {
-    "start": "json-server --watch db/db_unificado.json --port 3001"
+    "start": "json-server --watch db/db_unificado.json --static public --port 3001"
   },
   "keywords": [],
   "author": "Rommel Vieira Carneiro",
